# FALocalRepo

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  FA.py  FA_DB.py  FA_DL.py  FA_DLSUB.py  LICENSE  README.md  master.py  pyproject.toml  readkeys  requirements.txt
.github/ISSUE_TEMPLATE/: BUG.yml  Bug.md  Enhancement.md  FEATURE-REQUEST.yml  Feature Request.md
.github/workflows/: publish.yml  release.yml
.gitlab/issue_templates/: Bug.md  Enhancement.md  Feature Request.md
FA_db/: FA_DB.py  __init__.py  repair.py  search.py
FA_dl/: FA_DL.py  FA_DLSUB.py  __init__.py  cookies.py
FA_dldb/: FA_DB.py  FA_DL.py  FA_DLSUB.py  __init__.py
FA_tools/: __init__.py  log.py  reapir.py  repair.py  search.py  signal.py  signal_handler_unix.py  signal_handler_windows.py  tools.py
FA_up/: db_upgrade.py  v1v2.py  v2_3v2_6.py  v2_6v2_7.py  v2v2_3.py
FA_upd/: __init__.py  db_update.py  v1-v2.py  v1v2.py
FA_var/: variables.py
fa/: database.py  main.py
falocalrepo/: __doc__.py  __init__.py  __main__.py  __version__.py  commands.py  console.py  database.py  download.py  downloader.py  exceptions.py  interactive.py  main.py  menu.py  server.py  settings.py  update.py
falocalrepo/console/: app.py  colors.py  config.py  database.py  download.py  util.py
falocalrepo/server_templates/: journal.html  root.html  search.html  search_results.html  submission.html
