[tool.poetry]
name = "falocalrepo"
version = "4.4.6"
description = "Pure Python program to download any user's gallery, scraps, favorites, and journals from FurAffinity in an easily handled database."
authors = ["Matteo Campinoti <matteo.campinoti94@gmail.com>"]
license = "EUPL-1.2"
readme = "README.md"
homepage = "https://github.com/FurryCoders/FALocalRepo"
repository = "https://github.com/FurryCoders/FALocalRepo"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Utilities",
]

[tool.poetry.urls]
"Changelog" = "https://github.com/FurryCoders/FALocalRepo/blob/main/CHANGELOG.md"
"Source" = "https://github.com/FurryCoders/FALocalRepo"
"Bug Reports" = "https://github.com/FurryCoders/FALocalRepo/issues"
"Documentation" = "https://github.com/FurryCoders/FALocalRepo/wiki"
"Download" = "https://pypi.org/project/falocalrepo/#files"

[tool.poetry.scripts]
falocalrepo = "falocalrepo.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"
faapi = "~3.11.3"
falocalrepo-database = "~5.4.4"
falocalrepo-server = "~3.3.3"
psutil = "^5.9.3"
click = "^8.1.6"
click-help-colors = "^0.9.1"
pretty-errors = "^1.2.25"
wcwidth = "^0.2.5"
supports-color = "^0.1.2"

[build-system]
requires = ["poetry>=1.1.12"]
build-backend = "poetry.masonry.api"
