[tool.poetry]
name = "falocalrepo"
version = "4.5.2"
description = "Pure Python program to download any user's gallery, scraps, favorites, and journals from FurAffinity in an easily handled database."
authors = ["Matteo Campinoti <matteo.campinoti94@gmail.com>"]
license = "EUPL-1.2"
readme = "README.md"
homepage = "https://github.com/FurryCoders/FALocalRepo"
repository = "https://github.com/FurryCoders/FALocalRepo"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Utilities",
]

[tool.poetry.urls]
"Changelog" = "https://github.com/FurryCoders/FALocalRepo/blob/main/CHANGELOG.md"
"Source" = "https://github.com/FurryCoders/FALocalRepo"
"Bug Reports" = "https://github.com/FurryCoders/FALocalRepo/issues"
"Documentation" = "https://github.com/FurryCoders/FALocalRepo/wiki"
"Download" = "https://pypi.org/project/falocalrepo/#files"

[tool.poetry.scripts]
falocalrepo = "falocalrepo.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"
faapi = ">=3.11.11,<3.12.0"
falocalrepo-database = "~5.4.6"
falocalrepo-server = ">=3.4.3,<3.5.0"
click = "^8.1.7"
click-help-colors = "^0.9.4"
pretty-errors = "^1.2.25"
wcwidth = "^0.2.13"
browser-cookie3 = "^0.20.1"

[build-system]
requires = ["poetry>=1.1.12"]
build-backend = "poetry.masonry.api"
